--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^11.0.0",
+    "mongoose": "^6.1.6",
     "telegraf": "^4.5.2",
     "telegram-keyboard": "^2.3.0"
   },
